--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^6.4.1",
+    "axios": "^1.6.0",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
