--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^6.4.1",
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
